[tool.poetry]
name = "pydala"
version = "0.1.2"
description = "Poor man's simple python api for creating a local or remote datalake based on several (pyarrow) datasets using duckdb"
authors = ["Volker Lorrmann <volker.lorrmann@gmail.com>"]
readme = "README.md"
packages = [{include = "pydala", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# pathlib = "^1.0.1" # pathlib is a python core module since version 3.4
polars = "^0.15.1"
pyarrow = "^10.0.0"
duckdb = "^0.6.0"
s3fs = "^2022.11.0"
fsspec = "^2022.11.0"
pandas = "^1.5.2"
progressbar2 = "^4.2.0"
rtoml = "^0.9.0"
typer = "^0.7.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
coverage = "*"
pytest-cov = "*"
codecov = "*"
mypy = "*"
gitchangelog = "*"
mkdocs = "*"
pre-commit = "*"
poetry-dynamic-versioning = "*"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
ipykernel = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true

[tool.black]
line-length = 88
include = '\.pyi?$'
