[tool.poetry]
name = "pydala"
version = "0.2.1"
description = "Poor man's simple python api for creating a local or remote datalake based on several (pyarrow) datasets using duckdb"
authors = ["Volker Lorrmann <volker.lorrmann@gmail.com>"]
readme = "README.md"
packages = [{ include = "pydala", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.5"
pyarrow = "^11.0.0"
duckdb = "^0.7.1"
fsspec = "^2023.4.0"
pandas = "^2.0.0"
rtoml = "^0.9.0"
typer = "^0.7.0"
numpy = "^1.24.2"
tqdm = "^4.65.0"
joblib = "^1.2.0"
poetry = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
coverage = "*"
pytest-cov = "*"
codecov = "*"
mypy = "*"
gitchangelog = "*"
mkdocs = "*"
pre-commit = "*"
poetry-dynamic-versioning = "*"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-material = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
ipykernel = "*"

#[tool.poetry-dynamic-versioning]
#enable = true
#vcs = "git"
#style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true

[tool.black]
line-length = 88
include = '\.pyi?$'
